@startuml

title __OUTGOING_DATA's Class Diagram__\n

  namespace  {
    namespace om.example.piper.piperchat {
      namespace outgoing_data {
        class com.example.piper.piperchat.outgoing_data.PrivateRoomDetails {
            - UpdatedAt : Date
            - createdAt : Date
            - createdBy : String
            - lastMessageAt : Date
            - messages : List<Message>
            - name : String
            - roomId : String
            + PrivateRoomDetails()
            + equals()
            + getCreatedAt()
            + getCreatedBy()
            + getLastMessageAt()
            + getMessages()
            + getName()
            + getRoomId()
            + getRoomType()
            + getUpdatedAt()
            + hashCode()
            + setCreatedAt()
            + setCreatedBy()
            + setLastMessageAt()
            + setMessages()
            + setName()
            + setRoomId()
            + setRoomType()
            + setUpdatedAt()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace outgoing_data {
        class com.example.piper.piperchat.outgoing_data.UserLoginResponse {
            - email : String
            - fullName : String
            - rooms : List<Room>
            - userId : long
            - username : String
            + UserLoginResponse()
            + equals()
            + getEmail()
            + getFullName()
            + getProfile()
            + getRooms()
            + getUserId()
            + getUsername()
            + hashCode()
            + setEmail()
            + setFullName()
            + setProfile()
            + setRooms()
            + setUserId()
            + setUsername()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace outgoing_data {
        class com.example.piper.piperchat.outgoing_data.UserProfile {
            + UserProfile()
            + equals()
            + getProfile()
            + hashCode()
            + setProfile()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace outgoing_data {
        class com.example.piper.piperchat.outgoing_data.UserRest {
            - createdAt : Date
            - email : String
            - fullName : String
            - userId : long
            - username : String
            + UserRest()
            + equals()
            + getCreatedAt()
            + getEmail()
            + getFullName()
            + getUserId()
            + getUsername()
            + hashCode()
            + setCreatedAt()
            + setEmail()
            + setFullName()
            + setUserId()
            + setUsername()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  com.example.piper.piperchat.outgoing_data.PrivateRoomDetails o-- com.example.piper.piperchat.model.RoomType : roomType
  com.example.piper.piperchat.outgoing_data.UserLoginResponse o-- com.example.piper.piperchat.model.Profile : profile
  com.example.piper.piperchat.outgoing_data.UserProfile -up-|> com.example.piper.piperchat.outgoing_data.UserRest
  com.example.piper.piperchat.outgoing_data.UserProfile o-- com.example.piper.piperchat.model.Profile : profile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
